test/driver/error-in-c-header-parsing.delta.output
error-in-c-header-parsing.delta:4:8: error: couldn't import C header file 'c-header-with-error.h'
import "c-header-with-error.h";
       ^
