test/driver/error-in-c-header-parsing.delta
// RUN: %check_errors %not %delta -typecheck %s 2>&1

// CHECK: c-header-with-error.h:1:9: error: unknown type name 'foo'
import "c-header-with-error.h";

void main() {}
